--- a/src/main/webapp/css/cfMain.css
+++ b/src/main/webapp/css/cfMain.css
@@ -109,7 +109,11 @@ body {
 
 /* Intro */
 .intro {
-	padding: 100px 80px;
+	padding: 50px 80px;
+	display:flex;
+	justify-content:center;
+	flex-wrap:wrap;
+	height:30%
 }
 
 .intro h2 {
@@ -218,7 +222,7 @@ body {
 
 @media ( max-width : 768px) {
 	.hero {
-		height: 400px; /* 모바일에서는 높이 줄임 */
+		height: 40%; /* 모바일에서는 높이 줄임 */
 	}
 	.gnb {
 		flex-direction: column;
@@ -266,4 +270,16 @@ body {
 
 .top-button:hover {
 	background-color: #555;
+}
+.logo-img-container{
+	width:50%;
+	height:100%;
+	min-width:200px;
+	min-height:150px;
+	margin-top:30px;
+}
+.logo-img{
+	width:100%;
+	max-height:100%;
+	
 }
