--- a/src/main/webapp/css/cfMyPage.css
+++ b/src/main/webapp/css/cfMyPage.css
@@ -138,7 +138,7 @@
 	margin-top: 1rem;
 	width: 100%;
 	box-sizing: border-box;
-	justify-content: left;
+	justify-content: space-between;
 	border-bottom: 3px solid #ddd;
 	padding:10px;
 }
@@ -148,7 +148,12 @@
 	margin-top: 4rem;
 	width: 100%;
 	box-sizing: border-box;
-	justify-content: left;
+	justify-content: space-between;
 	border-bottom: 3px solid #ddd;
 	padding:10px;
+}
+.usernick-container{
+	display:flex;
+	justify-content:space-between;
+	width:70%;
 }
