--- a/src/main/webapp/css/cfMain.css
+++ b/src/main/webapp/css/cfMain.css
@@ -1,16 +1,6 @@
 @charset "UTF-8";/* GNB */
 
 /* 기본 설정 */
-* {
-	box-sizing: border-box; /*패딩과 테두리까지 포함한 크기로 설정함*/
-	margin: 0;
-	padding: 0;
-}
-
-body {
-	font-family: 'Inter', sans-serif;
-}
-
 .container {
 	background: #fff;
 	position: relative; /*화면이 유동적으로 반응할때*/
@@ -46,7 +36,7 @@ body {
 .gnb-center {
 	flex: 0 1 auto; /* 기본값 auto 유지 + 필요시 줄어듬 */
 	min-width: 80px; /* 최소 넓이 확보 */
-	position: absolute;
+	margin-left: 30vw;
 	left: 50%;
 	transform: translateX(-50%);
 }
@@ -72,7 +62,7 @@ body {
 	min-height: 18px;
 	object-fit: contain;
 }
-/* 모바일 대응 */
+/* ----------------------------------------------------------------모바일 대응--------------------------------------------------------------- */
 @media ( max-width : 768px) {
 	.gnb {
 		padding: 12px;
@@ -82,7 +72,6 @@ body {
 		margin-left: 6px;
 	}
 }
-
 /* Hero Section */
 .hero {
 	height: 500px;
@@ -223,14 +212,6 @@ body {
 @media ( max-width : 768px) {
 	.hero {
 		height: 40%; /* 모바일에서는 높이 줄임 */
-	}
-	.gnb {
-		flex-direction: column;
-		align-items: flex-start;
-		gap: 10px;
-	}
-	.logo {
-		font-size: 24px;
 	}
 	.hero h1 {
 		font-size: 28px;
