--- a/src/main/webapp/css/cfMyPage.css
+++ b/src/main/webapp/css/cfMyPage.css
@@ -25,7 +25,7 @@
 .gnb-center {
 	flex: 0 1 auto; /* 기본값 auto 유지 + 필요시 줄어듬 */
 	min-width: 80px; /* 최소 넓이 확보 */
-	position: absolute;
+	margin-left: 30vw;
 	left: 50%;
 	transform: translateX(-50%);
 }
@@ -62,98 +62,101 @@
 	}
 }
 /*--------------------------------------------------------------------gnb배너입니다--------------------------------------------------------*/
-.myPage-container{
-	display: flex;
-	align-items: center;
-	margin-top: 1rem;
-	width: 100%;
-	box-sizing: border-box;
-	justify-content: left;
-	border-bottom: 1px solid #ddd;
-	
-}
-.full-container{
-	box-sizing: border-box;
-	max-width: 600px;
-	padding-left:40px;
-	margin: 0 auto; 
-}
-.myPage-title{
-	display: flex;
-	align-items: center;
-	margin-top: 3rem;
-	width: fit-content;
-	box-sizing: border-box;
-	justify-content: center;
-	font-size:50px;
-	padding:10px 40px;
-	margin-bottom:50px;
-	border-bottom: 3px solid #ddd; 
-}
-.myPage-title-container{
-	display: flex;
-	justify-content: center;
-	width:100%;
-}
-.pr-img{
-	box-sizing: border-box;
-	border-radius: 50%;
-	background-color:#c79d9d;
-	width:100px;
-	height:100px;
-	overflow:hidden;
-	align-items: center;
-	margin-right:20px;
-	margin-left:20px;
-}
-.myPage-container input{
-	width : 300px;
-	box-sizing: border-box;
-	padding: 10px;
-	font-size: 1rem;
-}
-.myPage-container div{
-	width: auto;
-	box-sizing: border-box;
-	padding: 10px;
-	font-size: 1rem;
-	margin-right: 10px;
-}
-.pr-img-container{
-	display: flex;
-	align-items: center;
-	margin-top: 1rem;
-	width: 100%;
-	box-sizing: border-box;
-	justify-content: left;
-	margin-bottom:3rem;
-}
-.footer{
-	width:100%;
-	height:100px;
-}
-.myPage-info-container{
-	display: flex;
-	align-items: center;
-	margin-top: 1rem;
-	width: 100%;
-	box-sizing: border-box;
-	justify-content: space-between;
-	border-bottom: 3px solid #ddd;
-	padding:10px;
-}
-.myPage-user-container{
-	display: flex;
-	align-items: center;
-	margin-top: 4rem;
-	width: 100%;
-	box-sizing: border-box;
-	justify-content: space-between;
-	border-bottom: 3px solid #ddd;
-	padding:10px;
-}
-.usernick-container{
-	display:flex;
-	justify-content:space-between;
-	width:70%;
-}
+    
+    .all-container{
+        display: flex;
+        justify-content: center;
+        max-width: 80%;
+        max-height: 100%;
+        flex-wrap: wrap;
+        gap: 30px;
+    }
+    .my-page-title{
+        width: 100%;
+        border-bottom: 3px solid gray;
+        font-size: 90px;
+        margin-top: 100px;
+        display: flex;
+        justify-content: center;
+        padding-bottom: 30px;
+    }
+    .pr-img-container{
+        display: flex;
+        justify-content: space-between;
+        width: 90%;
+        margin-top: 30px;
+        align-items: center;
+    }
+    .pr-img{
+        width:40%;
+        aspect-ratio: 1/1;
+        border-radius: 50%;
+        background-color: aqua;
+        overflow:hidden;
+        margin-bottom: 20px;
+    }
+    .name-container{
+        display: flex;
+        justify-content: space-between;
+        width:100%;
+        margin-left: 10px;
+    }
+    .info-container{
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        align-items: center;
+        border-bottom: 3px solid gray;
+        padding: 10px 20px;
+        font-size: 25px;
+    }
+    .myPage-container{
+        width: 100%;
+        height: auto;
+        display: flex;
+        justify-content: left;
+        gap: 20%;
+        text-align: center;
+        align-items: center;
+        
+    }
+    @media (max-width: 500px) {
+        .myPage-container{
+            gap: 10%;
+        }
+        .my-page-title{
+            font-size: 50px;
+        }
+        .info-container{
+            font-size: 15px;
+        }
+        .pr-img{
+            width: 60%;
+        }
+        .pr-img-container{
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        .div1 {
+            font-size: 15px !important;
+        }
+        .userInfo, .usernick{
+            font-size: 15px !important;
+        }
+    }
+    .div1{
+        width: 30%;
+        font-size: 25px;
+    }
+    .body{
+        display: flex;
+        justify-content: center;
+    }
+    .userInfo{
+        width: 60%;
+        font-size: 25px;
+        overflow: auto;
+    }
+    .usernick{
+        font-size: clamp(18px, 2vw, 25px);
+    }
