--- a/src/main/webapp/css/cfRecipe.css
+++ b/src/main/webapp/css/cfRecipe.css
@@ -141,7 +141,7 @@
 .gnb-center {
 	flex: 0 1 auto; /* ê¸°ë³¸ê° auto ì ì§ + íìì ì¤ì´ë¬ */
 	min-width: 80px; /* ìµì ëì´ íë³´ */
-	position: absolute;
+	margin-left: 30vw;
 	left: 50%;
 	transform: translateX(-50%);
 }
