--- a/src/main/webapp/css/cfMyPageUpdate.css
+++ b/src/main/webapp/css/cfMyPageUpdate.css
@@ -25,9 +25,9 @@
 .gnb-center {
 	flex: 0 1 auto; /* 기본값 auto 유지 + 필요시 줄어듬 */
 	min-width: 80px; /* 최소 넓이 확보 */
-	margin-left: 30vw;
 	left: 50%;
 	transform: translateX(-50%);
+	position: absolute;
 }
 
 .logo {
@@ -83,17 +83,24 @@
     .pr-img-container{
         display: flex;
         justify-content: space-between;
-        width: 90%;
+        width: 100%;
         margin-top: 30px;
         align-items: center;
     }
     .pr-img{
-        width:40%;
-        aspect-ratio: 1/1;
+        width:50%;
+        aspect-ratio:1/1;
         border-radius: 50%;
-        background-color: aqua;
+        background-color: rgb(255, 255, 255);
         overflow:hidden;
         margin-bottom: 20px;
+        display:block;
+    }
+    .pr-img img{
+    	object-fit:cover;
+    	width:100%;
+    	height:100%;
+    	display:block;
     }
     .name-container{
         display: flex;
