--- a/src/main/webapp/css/cfRecipeIndex.css
+++ b/src/main/webapp/css/cfRecipeIndex.css
@@ -25,9 +25,9 @@
 .gnb-center {
 	flex: 0 1 auto; /* 기본값 auto 유지 + 필요시 줄어듬 */
 	min-width: 80px; /* 최소 넓이 확보 */
-	margin-left: 30vw;
 	left: 50%;
 	transform: translateX(-50%);
+	position: absolute;
 }
 
 .logo {
