--- a/src/main/webapp/css/cfSearchRecipe.css
+++ b/src/main/webapp/css/cfSearchRecipe.css
@@ -1,7 +1,10 @@
+
 @charset "UTF-8";
 body{
 	display:block !important;
 }
+
+
 
 /* GNB */
 .gnb {
@@ -29,9 +32,9 @@ body{
 .gnb-center {
 	flex: 0 1 auto; /* 기본값 auto 유지 + 필요시 줄어듬 */
 	min-width: 80px; /* 최소 넓이 확보 */
-	margin-left: 30vw;
 	left: 50%;
 	transform: translateX(-50%);
+	position: absolute;
 }
 
 .logo {
