--- a/src/main/webapp/css/cfMyPageUpdate.css
+++ b/src/main/webapp/css/cfMyPageUpdate.css
@@ -83,7 +83,7 @@
     .pr-img-container{
         display: flex;
         justify-content: space-between;
-        width: 100%;
+        width: 90%;
         margin-top: 30px;
         align-items: center;
     }
@@ -95,6 +95,10 @@
         overflow:hidden;
         margin-bottom: 20px;
         display:block;
+        cursor: pointer;
+    }
+     .pr-img:hover{
+       opacity: 0.7;
     }
     .pr-img img{
     	object-fit:cover;
@@ -106,7 +110,7 @@
         display: flex;
         justify-content: space-between;
         width:100%;
-        margin-left: 10px;
+        margin-left: 3%;
     }
     .info-container{
         display: flex;
@@ -119,7 +123,7 @@
     }
     .myPage-container{
         width: 100%;
-        height: 10%;
+        height: 5%;
         display: flex;
         justify-content: left;
         gap: 20%;
@@ -170,5 +174,9 @@
     .joinform{
         width: 100%;
         gap: 20%;
-        display: inline-grid;
+        display: flex;
+        justify-content: center;
+    }
+    .footer{
+    	height:200px;
     }
