--- a/src/main/webapp/css/cfJoinform.css
+++ b/src/main/webapp/css/cfJoinform.css
@@ -1,4 +1,15 @@
 @charset "UTF-8";
+@font-face {
+    font-family: 'HakgyoansimByeoljariTTF-B';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2408-5@1.0/HakgyoansimByeoljariTTF-B.woff2') format('woff2');
+    font-weight: 700;
+    font-style: normal;
+    font-size: 50px;
+}
+body{
+	font-family: 'HakgyoansimByeoljariTTF-B',
+	sans-serif !important;
+}
 /* GNB */
 .gnb {
   display: flex;
