--- a/src/main/webapp/css/cfRecipe.css
+++ b/src/main/webapp/css/cfRecipe.css
@@ -1,135 +1,166 @@
-@charset "UTF-8";/* GNB */
-        .recipe-img{
-            width: 400px;
-            height: 317.2px;
-            background-color: white;
-            border: 3px solid #ddd;
-            border-radius : 10px;
+@charset "UTF-8";
 
-        }
-        .voice-btn{
-            width: 200px;
-            height: 150px;
-            background-color: white;
-            border: 3px solid #ddd;
-            border-radius : 10px;
-            margin-left: 10px;
-            margin-bottom: 10px;
-        }
-        .touch-btn{
-            width: 200px;
-            height: 150px;
-            background-color: white;
-            border: 3px solid #ddd;
-            border-radius : 10px;
-            margin-left: 10px;
-        }
-        .img-container{
-        	width:100%;
-        	height:100%;
-        	display:flex;
-        	justify-content:center;
-        	align-items:center;
-        }
-        .img-container img{
-        	width:50%;
-        	height:70%;
-        }
-        .container{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 100%;
-            margin-top:50px;
-        }
-        .btn-container{
-            flex-direction: column;
-        }
-        .title-container{
-            display: flex;
-            justify-content: center;
-            margin-top: 100px;
-        }
-        .title{
-            font-size: 30px;
-            background-color: white;
-            border: 3px solid #ddd;
-            border-radius : 10px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 600px;
-            margin-top:50px;
-        }
-        .recipe-img2{
-            width: 200px;
-            height: 150px;
-            background-color: white;
-            border: 3px solid #ddd;
-            border-radius : 10px;
-        }
-        .container2{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 100%;
+@font-face {
+	font-family: 'HakgyoansimByeoljariTTF-B';
+	src:
+		url('https://fastly.jsdelivr.net/gh/projectnoonnu/2408-5@1.0/HakgyoansimByeoljariTTF-B.woff2')
+		format('woff2');
+	font-weight: 700;
+	font-style: normal;
+	font-size: 50px;
+}
+body{
+	font-family: 'HakgyoansimByeoljariTTF-B',
+	sans-serif !important;
+}
+.recipe-img {
+	width: 400px;
+	height: 317.2px;
+	background-color: white;
+	border: 3px solid #ddd;
+	border-radius: 10px;
+}
 
-        }
-        .btn-container2{
-            flex-direction: column;
-        }
-        .recipe-step-title{
-            width: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-top:200px;
-        }
-        .scroll{
-            display: flex;
-            justify-content: center;
-            margin-top:200px;
-            width: 100%;
-            height: 50px;
-            background-color: #ddd;
-        }
-        .scroll img{
-            width: 40px;
-	        transform: rotate(180deg);
-        }
-        .ingredient{
-            display: flex;
-            justify-content: center;
-            margin-top: 50px;
-        }
-        .ingre-text{
-            width: 99%;
-            height: 99%;
-            box-sizing: border-box;
-            padding: 10px;
-            margin: 2px 3px;
-            border: none;
-        }
-        .recipe-step{
-            width: 200px;
-            height: 317.2px;
-            background-color: white;
-            border: 3px solid #ddd;
-            border-radius : 10px;
-            margin-left: 10px;
-        }
-        .ingre-container{
-            border: 3px solid #ddd;
-            border-radius : 10px;
-            width: 600px;
-            height: 300px;
-        }
+.voice-btn {
+	width: 200px;
+	height: 150px;
+	background-color: white;
+	border: 3px solid #ddd;
+	border-radius: 10px;
+	margin-left: 10px;
+	margin-bottom: 10px;
+}
+
+.touch-btn {
+	width: 200px;
+	height: 150px;
+	background-color: white;
+	border: 3px solid #ddd;
+	border-radius: 10px;
+	margin-left: 10px;
+}
+
+.img-container {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.img-container img {
+	width: 50%;
+	height: 70%;
+}
+
+.container {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	margin-top: 50px;
+}
+
+.btn-container {
+	flex-direction: column;
+}
+
+.title-container {
+	display: flex;
+	justify-content: center;
+	margin-top: 100px;
+}
+
+.title {
+	font-size: 30px;
+	background-color: white;
+	border: 3px solid #ddd;
+	border-radius: 10px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 600px;
+	margin-top: 50px;
+}
+
+.recipe-img2 {
+	width: 200px;
+	height: 150px;
+	background-color: white;
+	border: 3px solid #ddd;
+	border-radius: 10px;
+}
+
+.container2 {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+}
+
+.btn-container2 {
+	flex-direction: column;
+}
+
+.recipe-step-title {
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-top: 200px;
+}
+
+.scroll {
+	display: flex;
+	justify-content: center;
+	margin-top: 200px;
+	width: 100%;
+	height: 50px;
+	background-color: #ddd;
+}
+
+.scroll img {
+	width: 40px;
+	transform: rotate(180deg);
+}
+
+.ingredient {
+	display: flex;
+	justify-content: center;
+	margin-top: 50px;
+}
+
+.ingre-text {
+	width: 99%;
+	height: 99%;
+	box-sizing: border-box;
+	padding: 10px;
+	margin: 2px 3px;
+	border: none;
+}
+
+.recipe-step {
+	width: 200px;
+	height: 317.2px;
+	background-color: white;
+	border: 3px solid #ddd;
+	border-radius: 10px;
+	margin-left: 10px;
+}
+
+.ingre-container {
+	border: 3px solid #ddd;
+	border-radius: 10px;
+	width: 600px;
+	height: 300px;
+}
 /*--------------------------------------------------------------------------------------------------------*/
- /*---------------------------------------------------gnbë°°ëìëë¤-----------------------------------------------*/
- /* GNB */
+/*---------------------------------------------------gnbë°°ëìëë¤-----------------------------------------------*/
+/* GNB */
 .gnb {
 	display: flex; /*íë©´ì ë¥ëì¼ë¡ ë°°ì¹í ë*/
-	flex-wrap: nowrap; /*ìì§ì ë ¬ì ì íí¨ ê·¼ë° ê¸°ë¥ êµ¬íì´ ì¤í¨íë¯í¨*/
+	flex-wrap: nowrap;
+	/*ìì§ì ë ¬ì ì íí¨ ê·¼ë° ê¸°ë¥ êµ¬íì´ ì¤í¨íë¯í¨*/
 	justify-content: space-between;
 	align-items: center;
 	padding: 20px 20px;
