--- a/src/main/webapp/css/cfRecipeDetail.css
+++ b/src/main/webapp/css/cfRecipeDetail.css
@@ -1,135 +1,171 @@
 @charset "UTF-8";
-        .container{
-            display: flex;
-            justify-content: center;
-            width: 100%;
-            flex-wrap: wrap;
-        }
-        .recipe-header{
-            display:flex;
-            justify-content: left;
-            width: 100%;
-            font-size: 4vw;
-            border-bottom: 3px solid gray;
-            padding: 2% 5%;
-        }
-        .recipe-image{
-        	width:40%;
-        	aspect-ratio:1/1;
-        }
-        .profile{
-        	width:10%;
-        }
-        .main-content{
-            width:80%;
-            padding: 3%;
-            display:flex;
-            justify-content:center;
-            flex-wrap:wrap;
-            gap:3%;
-        }
-        .side-panel{
-        	width:40%;
-        	padding:3%;
-        }
-        .message-box{
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            gap:3%;
-        }
-        .meta-row {
-            width: 100%;
-            display: flex; /* <-- 이 속성을 추가해보세요. */
-            justify-content: space-between; /* 선택 사항: 양쪽 끝으로 라벨과 값을 배치 */
-            align-items: center; /* 선택 사항: 세로 중앙 정렬 */
-            margin-bottom: 10%; /* 선택 사항: 각 행 사이에 간격 추가 */
-            font-size: 2vw;
-            margin:0% 5% 10% 5%;
-        }
-        .recipe-meta-info{
-        	width:100%;
-        }
-        .achievement-box{
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            width:100%;
-            font-size: 2vw;
-            padding: 2%;
-        }
-        .recipe-tags{
-            width: 50%;
-            display:flex;
-            flex-wrap:wrap;
-            padding:5%;
-        }
-        .recipe-actions{
-            width: 100%;
-            display:flex;
-            justify-content: center;
-            padding: 0 5%;
-            gap:5%;
-        }
-        .recipe-actions button{
-        	width:20%;
-        	aspect-ratio:2/1;
-        	font-size: 2vw;
-        }
-        .comment-section{
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-        }
-        .comment-sort, .comment-input-wrapper,.login-prompt,.comment-list{
-            width: 80%;
-        }
-        .input-box{
-        	width:100%;
-        }
-        .input-box input{
-        	width:100%;
-        	margin: 0px 3%;
-        	text-align:left;
-        }
-        #commentInput{
-        	width:100%;
-        }
-        .comment-input-wrapper{
-        	display:flex;
-        	justify-content:center;
-        	align-items:center;
-        	margin-bottom: 5%;
-        }
-        .comment-input-wrapper input{
-        	width:100%;
-        }
-        .recipe-description{
-        	width:80%;
-        	display:flex;
-        	flex-wrap:wrap;
-        }
-        .comment-sort{
-        	display:flex;
-        	justify-content:left;
-        	margin-bottom: 3%;
-        	border-bottom: 2px solid #ddd;
-        	align-items:center;
-        	padding:1% 5%;
-        }
-        .sort-dropdown{
-        	display:flex;
-        	justify-content:space-between;
-        }
-        .buttons{
-        	margin: 0px 3%;
-        }
-        .reply-form input{
-        	width:100%;
-        	margin-bottom: 1%;
-        	text-align:left;
-        }
-		.recipe-actions button{
-			padding: 0;
-		}
+@font-face {
+    font-family: 'HakgyoansimByeoljariTTF-B';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2408-5@1.0/HakgyoansimByeoljariTTF-B.woff2') format('woff2');
+    font-weight: 700;
+    font-style: normal;
+    font-size: 50px;
+}
+body{
+	font-family: 'HakgyoansimByeoljariTTF-B',
+	sans-serif !important;
+}
+.container {
+	display: flex;
+	justify-content: center;
+	width: 100%;
+	flex-wrap: wrap;
+}
+
+.recipe-header {
+	display: flex;
+	justify-content: left;
+	width: 100%;
+	font-size: 4vw;
+	border-bottom: 3px solid gray;
+	padding: 2% 5%;
+}
+
+.recipe-image {
+	width: 40%;
+	aspect-ratio: 1/1;
+}
+
+.profile {
+	width: 10%;
+}
+
+.main-content {
+	width: 80%;
+	padding: 3%;
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	gap: 3%;
+}
+
+.side-panel {
+	width: 40%;
+	padding: 3%;
+}
+
+.message-box {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	gap: 3%;
+}
+
+.meta-row {
+	width: 100%;
+	display: flex; /* <-- 이 속성을 추가해보세요. */
+	justify-content: space-between; /* 선택 사항: 양쪽 끝으로 라벨과 값을 배치 */
+	align-items: center; /* 선택 사항: 세로 중앙 정렬 */
+	margin-bottom: 10%; /* 선택 사항: 각 행 사이에 간격 추가 */
+	font-size: 2vw;
+	margin: 0% 5% 10% 5%;
+}
+
+.recipe-meta-info {
+	width: 100%;
+}
+
+.achievement-box {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	width: 100%;
+	font-size: 2vw;
+	padding: 2%;
+}
+
+.recipe-tags {
+	width: 50%;
+	display: flex;
+	flex-wrap: wrap;
+	padding: 5%;
+}
+
+.recipe-actions {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	padding: 0 5%;
+	gap: 5%;
+}
+
+.recipe-actions button {
+	width: 20%;
+	aspect-ratio: 2/1;
+	font-size: 2vw;
+}
+
+.comment-section {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+}
+
+.comment-sort, .comment-input-wrapper, .login-prompt, .comment-list {
+	width: 80%;
+}
+
+.input-box {
+	width: 100%;
+}
+
+.input-box input {
+	width: 100%;
+	margin: 0px 3%;
+	text-align: left;
+}
+
+#commentInput {
+	width: 100%;
+}
+
+.comment-input-wrapper {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 5%;
+}
+
+.comment-input-wrapper input {
+	width: 100%;
+}
+
+.recipe-description {
+	width: 80%;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.comment-sort {
+	display: flex;
+	justify-content: left;
+	margin-bottom: 3%;
+	border-bottom: 2px solid #ddd;
+	align-items: center;
+	padding: 1% 5%;
+}
+
+.sort-dropdown {
+	display: flex;
+	justify-content: space-between;
+}
+
+.buttons {
+	margin: 0px 3%;
+}
+
+.reply-form input {
+	width: 100%;
+	margin-bottom: 1%;
+	text-align: left;
+}
+
+.recipe-actions button {
+	padding: 0;
+}
